# videosite

./: apply_all_migrations.sh  docker-compose.yml  drop_database.sh  init_db.sql  reset_test_db.sh  rollback_migration.sh
audit/: Cargo.toml  Dockerfile
audit/db/: apply_migrations.sh  drop_database.sh  new_migration.sh  rollback_migration.sh
audit/db/audit/: 000001_create-audit-event-table.down.sql  000001_create-audit-event-table.up.sql
audit/src/: main.rs  models.rs
audit/src/db/: mod.rs  schema.rs
auth/: Cargo.toml  Dockerfile
auth/db/: apply_migrations.sh  drop_database.sh  new_migration.sh  rollback_migration.sh
auth/db/user/: 000001_create_user_table.up.sql  000002_user_view.down.sql  000002_user_view.up.sql  000003_password_valid_until_field.down.sql  000003_password_valid_until_field.up.sql
auth/db/user/test_dataset/: data.sql
auth/src/: main.rs
auth/src/db/: mod.rs  schema.rs
dev-services/localstack/: init-aws.sh
dev-services/proxy/: nginx.conf
embed-tag-service/: Cargo.toml  Dockerfile
embed-tag-service/src/: main.rs
frontend/: Dockerfile  nginx.conf
frontend/app/: index.html  login.html  player.html  user.html
frontend/app/static/css/: login.css  player.css  styles.css  user.css
frontend/app/static/js/: app.js  login.js  player.js  upload.js  user.js
frontend/app/static/js/components/: README.md  error-banner.js
frontend/app/static/js/utils/: error-utils.js
helpers/hash_password/: Cargo.toml
helpers/hash_password/src/: main.rs
ingestion/: Cargo.toml  Dockerfile
ingestion/db/: apply_migrations.sh  drop_database.sh  new_migration.sh  rollback_migration.sh
ingestion/db/ingestion/: 000001_create-user-upload-table.down.sql  000001_create-user-upload-table.up.sql  000002_create-active-uploads-view.down.sql  000002_create-active-uploads-view.up.sql  000003_create-user-quota-table.down.sql  000003_create-user-quota-table.up.sql  000004_chunk-upload-table.down.sql  000004_chunk-upload-table.up.sql  000005_chunk-information-table.down.sql  000005_chunk-information-table.up.sql
ingestion/db/ingestion/test_dataset/: data.sql
ingestion/src/: main.rs  message.rs  models.rs  upload.rs
ingestion/src/db/: mod.rs  schema.rs
libs/audit/: Cargo.toml
libs/audit/src/: lib.rs
libs/auth-check/: Cargo.toml
libs/auth-check/src/: lib.rs
metadata/: Cargo.toml  Dockerfile
metadata/src/: main.rs
proxy/: nginx.conf
resource-server/: Cargo.toml  Dockerfile
resource-server/db/: apply_migrations.sh  drop_database.sh  new_migration.sh  rollback_migration.sh
resource-server/db/resource/: 000001_create-resource-table.down.sql  000001_create-resource-table.up.sql  000002_create-active-resource-view.down.sql  000002_create-active-resource-view.up.sql  000003_create-transfer-quota-table.down.sql  000003_create-transfer-quota-table.up.sql  000004_create-video-metadata-table.down.sql  000004_create-video-metadata-table.up.sql
resource-server/src/: main.rs  model.rs
resource-server/src/db/: mod.rs  schema.rs
video-transcoding/: Cargo.toml  Dockerfile
video-transcoding/src/: main.rs
virus-scan/: Cargo.toml  Dockerfile  entrypoint.sh
virus-scan/src/: main.rs
