[package]
name = "audit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono", "serde_json"] }
uuid =  { version = "1.17.0", features = ["serde", "v4"] }
pq-sys = { version = "0.7.2", features = ["bundled" ] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.96.0", features = ["rt-tokio"] }
aws-sdk-sqs = "1.74.0"
chrono = "0.4.41"