[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"]}
axum-client-ip = "1.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
josekit = "0.10.3"
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono" ] }
uuid =  { version = "1.17.0", features = ["serde", "v4"] }
scrypt = "0.11.0"
pq-sys = { version = "0.7.2", features = ["bundled" ] }
audit = { path = "../libs/audit" }
chrono = "0.4.41"
base64 = "0.22.1"
