[package]
name = "embed-tag-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
reqwest = "0.12.23"
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }