[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
axum-client-ip = "1.1.3"
auth-check = { path = "../libs/auth-check" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tower = "0.5.2"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
aws-sdk-sqs = "1.74.0"
uuid =  { version = "1.17.0", features = ["serde", "v4"] }
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono" ] }
pq-sys = { version = "0.7.2", features = ["bundled" ] }
chrono = "0.4.41"
audit = { path = "../libs/audit" }