[package]
name = "resource-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = { version = "0.8.4", features = ["macros", "json"] }
http-body-util = "0.1.3"
axum-extra = { version = "0.10.1", features = ["cookie"]}
axum-client-ip = "1.1.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono"] }
uuid =  { version = "1.17.0", features = ["serde", "v4"] }
pq-sys = { version = "0.7.2", features = ["bundled" ] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.96.0", features = ["rt-tokio"] }
aws-sdk-sqs = "1.74.0"
chrono = "0.4.41"
url = "2.5.7"
aws-smithy-types-convert = { version = "0.60.9", features = [ "convert-chrono" ] }
auth-check = { path = "../libs/auth-check" }
audit = { path = "../libs/audit" }