[package]
name = "video-transcoding"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
aws-sdk-sqs = "1.74.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["stream"] }
futures-util = "0.3.31"
shlex = "1.3.0"