[package]
name = "auth-check"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = [ "json" ] }
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"